# konfwg

./: LICENSE  README.md  pyproject.toml  setup.sh
ansible/: ansible.cfg
ansible/group_vars/all/: konfwg.yml  wireguard.yml
ansible/inventories/group_vars/all/: caddy.yml  konfwg.yml
ansible/playbooks/: konfwg.yml  packages.yml  site.yml  wireguard.yml
ansible/roles/caddy/handlers/: main.yml
ansible/roles/caddy/tasks/: main.yml
ansible/roles/caddy/templates/: Caddyfile.j2  konfwg.caddy.j2
ansible/roles/konfwg/tasks/: main.yml
ansible/roles/konfwg/templates/: konfwg.caddy.j2  konfwg.conf.j2  konfwg.service.j2
ansible/roles/system/tasks/: main.yml
ansible/roles/wireguard/handlers/: main.yml
ansible/roles/wireguard/tasks/: main.yml
ansible/templates/: wg0.conf.j2
src/cli/: main.py
src/konfwg/: config.py  initialize.py  network.py  security.py
src/konfwg/database/: __init__.py  controller.py  engine.py  models.py  sync.py
src/konfwg/templates/: client.conf.j2
src/konfwg/web/: app.py
src/konfwg/web/templates/: login.html  portal.html
src/konfwg/wg/: commands.py  reader.py  render.py
src/konfwg/wg/templates/: client.conf.j2  server.conf.j2
