[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "konfwg"
version = "0.1.0"
description = "WireGuard peer management and configuration tool"
readme = "README.md"
requires-python = ">= 3.11"
license = { file = "LICENSE" }

authors = [
    { name = "Karolis Riaubūnas" }
]

dependencies = [
    "typer >= 0.21",
    "pydantic-settings >= 2.12.0",
    "fastapi >= 0.128.4",
    "uvicorn >= 0.40.0",
    "SQLAlchemy >= 2.0.46",
    "Jinja2 >= 3.1.6",
    "python-multipart >= 0.0.22",
    "bcrypt >= 5.0.0",
    "itsdangerous >= 2.2.0",
]

[project.scripts]
konfwg = "cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]